# music-metadata-enhancer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  enrich_metadata.py  fix_album_art.py  package.json  picard_fallback_enricher.py  pre_push.py  pyproject.toml  requirements.txt
.github/workflows/: checkup.yml
music_metadata_enhancer/: __init__.py  enrich_metadata.py  fix_album_art.py  main.py  picard_fallback_enricher.py  pre_push.py  standalone_compat.py
